# opencv_course

./: .gitattributes  .gitignore  CMakeLists.txt
Project2/: CMakeLists.txt  project.cpp
Week1/: CMakeLists.txt
Week1/QR Code Assignment/: CMakeLists.txt  submission.cpp
Week1/Section2/startercode.0/: basic_image_operations.ipynb
Week1/sample_image_operations/: CMakeLists.txt  sample_image_operations.cpp
Week1/sunglass_filter/: CMakeLists.txt  musk_glasses.cpp
Week1/week1-cpp/Application_Sunglasses_Filter/: CMakeLists.txt  Load_Images.cpp  Using_Arithmetic_Operations.cpp  Using_Naive_Replace.cpp
Week1/week1-cpp/Basic_Image_Operations/: CMakeLists.txt  Copying_a_region_to_another.cpp  Create_new_images.cpp  Creating_an_image_mask.cpp  Cropping_an_Image_Section.cpp  Resizing_an_image.cpp
Week1/week1-cpp/Bitwise_Operations/: CMakeLists.txt  Example.cpp
Week1/week1-cpp/Getting_started_with_images/: CMakeLists.txt  Color_Images.cpp  Image_as_a_matrix.cpp  Image_with_alpha_channel.cpp  Manipulating_Color_Pixels.cpp  Manipulating_Pixels.cpp  Manipulating_group_of_pixels.cpp  Saving_an_image.cpp  Splitting_and_merging_channels.cpp
Week1/week1-cpp/Image_Annotation/: CMakeLists.txt  Drawing_Circles.cpp  Drawing_Ellipse.cpp  Drawing_Lines.cpp  Drawing_Rectangles.cpp  Drawing_Text.cpp  Intro.cpp
Week1/week1-cpp/Mathematical_Operations_on_Images/: Brightness_Enhancement.cpp  CMakeLists.txt  Contrast_Enhancement.cpp  Datatype_Conversion.cpp  Pitfalls_of_using_uint8.cpp
Week10/: CMakeLists.txt
Week10/week10-cpp/: CMakeLists.txt  face_detection_opencv_dnn.cpp  object_detection_yolo.cpp
Week11/: CMakeLists.txt
Week11/cpp/: CMakeLists.txt  faceAlignment.cpp  facialLandmarkDetector.cpp  fastWebcamFLD.cpp  webcamStabilizedFLD.cpp
Week11/cpp/results/: family_0.txt
Week12/: CMakeLists.txt
Week12/SmileDetection/: CMakeLists.txt  Smile_Detection.cpp
Week12/week12-cpp/cpp/: CMakeLists.txt  alphaBlend.cpp  bugeyeImage.cpp
Week13/: CMakeLists.txt
Week13/week13-cpp/cpp/: CMakeLists.txt  aging.cpp
Week13/week13-cpp/data/images/: beard1.png.txt
Week14/: .gitattributes  CMakeLists.txt
Week14/cpp/: CMakeLists.txt  eigenFace.cpp  enrollDlibFaceRec.cpp  enrollOpenFace.cpp  testDlibFaceRecImage.cpp  testDlibFaceRecVideo.cpp  testOpenCVFaceRec.cpp  testOpenFaceImage.cpp  testOpenFaceVideo.cpp  trainOpenCVFaceRec.cpp
Week2/: .gitignore  CMakeLists.txt
Week2/Homework2/: CMakeLists.txt  README.md  submission.cpp
Week2/Homework3/: CMakeLists.txt  README.md  submission.cpp
Week2/week2-cpp/: CMakeLists.txt  VideoRead.cpp  VideoWrite.cpp  adding_a_trackbar_as_controller.cpp  dataPath.hpp  using_the_keyboard_as_input_device.cpp  using_the_mouse_for_annotation.cpp
Week3/: CMakeLists.txt
Week3/CoinDetection/: CMakeLists.txt  submission.cpp
Week3/ErosionDilation/: CMakeLists.txt  submission.cpp
Week3/week3-cpp/: CMakeLists.txt  blobDetection.cpp  connectedComponentAnalysis.cpp  contours.cpp  erosionDilation.cpp  implementationOfMorphologicalOperations.cpp  openingClosing.cpp  thresholding.cpp
Week4/: CMakeLists.txt
Week4/Autofocus/: CMakeLists.txt  autofocus.cpp
Week4/ColorConversion/: CMakeLists.txt  colorconv.cpp
Week4/Filtering/: CMakeLists.txt  filtering.cpp
Week4/week4-cpp/: CMakeLists.txt
Week4/week4-cpp/ColorSpaces/: CMakeLists.txt  LabColorSpace.cpp  YCrCbColorSpace.cpp  bgrColorSpace.cpp  dataPath.hpp  desaturationFilter.cpp  dominantColor.cpp  hsvColorSpace.cpp
Week4/week4-cpp/ColorTransformations/: CLAHE.cpp  CMakeLists.txt  cooling.cpp  histogramEqualizationColor.cpp  histogramEqualizationGrayscale.cpp  warming.cpp
Week4/week4-cpp/ImageFiltering/: CMakeLists.txt  convolution.cpp
Week4/week4-cpp/ImageGradients/: CMakeLists.txt  canny.cpp  imageSharpening.cpp  laplacian.cpp  sobelFilter.cpp
Week4/week4-cpp/ImageSmoothing/: CMakeLists.txt  bilateralBlur.cpp  boxBlur.cpp  gaussianBlur.cpp  medianBlur.cpp
Week5/: CMakeLists.txt
Week5/week5_cpp/: CMakeLists.txt  faceBlending.cpp  hdr.cpp  houghTransform.cpp  imageInpainting.cpp  seamlessCloning.cpp
Week6_project1/: CMakeLists.txt
Week6_project1/blemish_removal/: CMakeLists.txt  submission.cpp
Week6_project1/camera_filter/: CMakeLists.txt  camera_filter.cpp
Week6_project1/chroma_key/: CMakeLists.txt  submission.cpp
Week6_project1/instagram_filters/: CMakeLists.txt  instagram_filters.cpp
Week7/: CMakeLists.txt
Week7/ImageAlignment/: CMakeLists.txt  frame_data_t.cpp  frame_data_t.h  image_aligment.cpp
Week7/Panorama/: CMakeLists.txt  panorama.cpp
Week7/week7-cpp/: Application_Panorama.cpp  CMakeLists.txt  dataPath.hpp
Week8/: CMakeLists.txt
Week9/: CMakeLists.txt
Week9/week9-cpp/: CMakeLists.txt
cmake/: Conan.cmake
inc/: my_cv_utils.h
